--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,18 @@
 }
 
 * {
+  margin: 0; padding: 0;
+  text-decoration: none;
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  outline: 0; border: none;
   font-family: 'Encode Sans Expanded', sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-snap-type: y proximity;
+}
+
+html::-webkit-scrollbar {
+  display: none;
 }
