--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
 html {
   scroll-behavior: smooth;
   scroll-snap-type: y proximity;
+  scrollbar-width: none; /* Firefox */
 }
 
 html::-webkit-scrollbar {
